--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,20 +10,21 @@ spring:
     compose:
       enabled: false
 
-  mybatis-plus:
-    configuration:
-      log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
-      map-underscore-to-camel-case: true
-    global-config:
-      db-config:
-        id-type: ASSIGN_ID
-        table-prefix: t_
-        logic-delete-field: deleted
-        logic-delete-value: 1
-        logic-not-delete-value: 0
+mybatis-plus:
+  configuration:
+    log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+    map-underscore-to-camel-case: true
+  global-config:
+    db-config:
+      id-type: ASSIGN_ID
+      table-prefix: t_
+      logic-delete-field: deleted
+      logic-delete-value: 1
+      logic-not-delete-value: 0
 
-  logging:
-    level:
-      root: DEBUG
-
+logging:
+  level:
+    root: DEBUG
+    org.apache.ibatis: DEBUG
+    com.baomidou.mybatisplus: DEBUG
 
