--- a/build.gradle
+++ b/build.gradle
@@ -30,10 +30,15 @@ dependencies {
 	implementation 'com.fasterxml.uuid:java-uuid-generator:5.1.0'
 
 	implementation 'org.springframework.boot:spring-boot-starter-jdbc:4.0.1'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	// MyBatis Plus - Spring Boot 4対応版
 	implementation 'com.baomidou:mybatis-plus-spring-boot4-starter:3.5.15'
+	implementation 'com.baomidou:mybatis-plus-extension:3.5.15'
 	implementation 'com.baomidou:mybatis-plus-generator:3.5.15'
+	// MyBatis Plus - ページングプラグイン用（v3.5.9以降必須）
+	implementation 'com.baomidou:mybatis-plus-jsqlparser:3.5.15'
 	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
-	developmentOnly 'me.paulschwarz:springboot4-dotenv'
+	developmentOnly 'me.paulschwarz:springboot4-dotenv:5.1.0'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
 	developmentOnly 'org.springframework.boot:spring-boot-docker-compose'
