--- a/build.gradle
+++ b/build.gradle
@@ -38,6 +38,10 @@ dependencies {
 	// MyBatis Plus - ページングプラグイン用（v3.5.9以降必須）
 	implementation 'com.baomidou:mybatis-plus-jsqlparser:3.5.15'
 	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
+	// SpringDoc OpenAPI (Swagger UI)
+	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.15'
+
+	// .envファイル読み込み
 	developmentOnly 'me.paulschwarz:springboot4-dotenv:5.1.0'
 	compileOnly 'org.projectlombok:lombok'
 	developmentOnly 'org.springframework.boot:spring-boot-devtools'
