--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -28,3 +28,14 @@ logging:
     org.apache.ibatis: DEBUG
     com.baomidou.mybatisplus: DEBUG
 
+# SpringDoc OpenAPI設定
+springdoc:
+  api-docs:
+    path: /api-docs
+    enabled: true
+  swagger-ui:
+    path: /swagger-ui.html
+    enabled: true
+    operations-sorter: method
+    tags-sorter: alpha
+  show-actuator: false
