在庫管理機能の実装とVavrの導入
- 在庫管理機能のCRUD操作を実装
  - 在庫登録、更新、削除、検索、照会機能を追加
  - MStockControllerにSwaggerアノテーションを追加
  - MStockServiceImplにVavrを使用した業務ロジックを実装

- Vavrライブラリを追加（業務ロジック用）
  - build.gradleにio.vavr:vavr:0.10.4を追加
  - MStockServiceImplとMUserServiceImplでOptionを使用したnullチェックとバリデーションを実装
  - MyBatis呼び出しは副作用として一括処理

- テストコードの追加
  - MStockServiceImplTest: 16件のテストケース（正常系・異常系）
  - MStockControllerTest: 8件のテストケース（APIエンドポイントのテスト）

- その他の変更
  - MUserServiceImplにVavrを使用した実装を追加

--- a/build.gradle
+++ b/build.gradle
@@ -33,13 +33,16 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	// MyBatis Plus - Spring Boot 4対応版
 	implementation 'com.baomidou:mybatis-plus-spring-boot4-starter:3.5.15'
+	// MyBatis Plus - ページングプラグイン用（v3.5.9以降必須）
+	// PaginationInnerInterceptorを使用するために必要
+	implementation 'com.baomidou:mybatis-plus-jsqlparser:3.5.15'
 	implementation 'com.baomidou:mybatis-plus-extension:3.5.15'
 	implementation 'com.baomidou:mybatis-plus-generator:3.5.15'
-	// MyBatis Plus - ページングプラグイン用（v3.5.9以降必須）
-	implementation 'com.baomidou:mybatis-plus-jsqlparser:3.5.15'
 	implementation 'org.springframework.boot:spring-boot-starter-webmvc'
 	// SpringDoc OpenAPI (Swagger UI)
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.15'
+	// Vavr
+	implementation 'io.vavr:vavr:0.10.4'
 
 	// .envファイル読み込み
 	developmentOnly 'me.paulschwarz:springboot4-dotenv:5.1.0'
