--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,9 +33,33 @@ services:
     networks:
       - playjava-network
 
+  prometheus:
+    container_name: prometheus
+    image: prom/prometheus:latest
+    volumes:
+      - ./prometheus.yml:/etc/prometheus/prometheus.yml:ro
+    command:
+      - "--config.file=/etc/prometheus/prometheus.yml"
+    ports:
+      - 9090:9090
+    networks:
+      - playjava-network
+
+  grafana:
+    container_name: grafana
+    image: grafana/grafana:latest
+    ports:
+      - 3000:3000
+    depends_on:
+      - prometheus
+    networks:
+      - playjava-network
+
+
 volumes:
   postgres_data:
   pgadmin_data:
+  opensearch_data:
 
 networks:
   playjava-network:
