--- a/prometheus.yml
+++ b/prometheus.yml
@@ -6,4 +6,5 @@ scrape_configs:
     metrics_path: "/actuator/prometheus"
     static_configs:
       - targets:
-          - "host.docker.internal:8080"
+          - "app:8080"
+    # ホストから直接起動する場合は: "host.docker.internal:8080"
